hphp/hack/test/extracted_from_manual/07-traits-and-interfaces/03-using-a-trait-06.hack.exp
ERROR: File "03-using-a-trait-06.hack", line 11, characters 7-7:
Constant FOO is defined concretely in multiple ancestors (Typing[4374])
  File "03-using-a-trait-06.hack", line 4, characters 9-11:
  One conflicting definition is here
  File "03-using-a-trait-06.hack", line 8, characters 9-11:
  Another conflicting definition is here
ERROR: File "03-using-a-trait-06.hack", line 11, characters 15-16:
Some members in class `A` are incompatible with those declared in type `T1` (Typing[4374])
  File "03-using-a-trait-06.hack", line 8, characters 9-11:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "03-using-a-trait-06.hack", line 4, characters 9-11:
  `FOO` inherited from `T1`
  File "03-using-a-trait-06.hack", line 8, characters 9-11:
  conflicts with constant `FOO` inherited from `T2`.
